--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,26 +9,26 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/webpack-config": "^19.0.0",
+    "@expo/webpack-config": "^0.12.52",
     "@react-navigation/drawer": "^6.6.4",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/stack": "^6.3.18",
     "axios": "^1.5.1",
-    "expo": "~49.0.13",
-    "expo-image": "~1.3.4",
-    "expo-location": "~16.1.0",
-    "expo-status-bar": "~1.6.0",
-    "lottie-react-native": "5.1.6",
+    "expo": "^51.0.9",
+    "expo-image": "~1.12.9",
+    "expo-location": "~17.0.1",
+    "expo-status-bar": "~1.12.1",
+    "lottie-react-native": "6.7.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.72.6",
-    "react-native-gesture-handler": "~2.12.0",
-    "react-native-reanimated": "~3.3.0",
-    "react-native-safe-area-context": "4.6.3",
+    "react-native": "0.74.1",
+    "react-native-gesture-handler": "~2.16.1",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "4.10.1",
     "react-native-safe-area-view": "^1.1.1",
-    "react-native-screens": "~3.22.0",
+    "react-native-screens": "3.31.1",
     "react-native-vector-icons": "^10.0.0",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
